<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:background="#A4C41B"
            android:text="@string/su_sign_up" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:textSize="12dp" 
            android:text="@string/cancel" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:textColor="#EB6D83"
        android:text="@string/su_title" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/su_username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/su_password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/su_confirm_password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
    
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="250dp"
        android:text="@string/su_email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="textEmailAddress" >
    </EditText>
    
	<Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    	android:layout_marginTop="300dp"
        android:text="@string/su_sign_up_for_ccw" />
	
</RelativeLayout>
