<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:background="#A4C41B"
            android:text="@string/up_forget_password" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:textSize="12dp" 
            android:text="@string/cancel" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:text="@string/up_new_password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="160dp"
        android:text="@string/up_confirm_password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
    
	<Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
    	android:layout_marginTop="250dp"
    	android:layout_centerHorizontal="true"
        android:text="@string/save" />
	
</RelativeLayout>
