<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:background="#A4C41B"
            android:text="@string/rp_forget_password" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:textSize="12dp" 
            android:text="@string/cancel" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/rp_username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
    </EditText>
    
	<Button
        android:id="@+id/retrievePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_marginTop="160dp"
    	android:layout_centerHorizontal="true"
        android:text="@string/rp_get_password_back" />
	
</RelativeLayout>
